--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "firebase": "^10.7.1",
+    "firebaseui": "^6.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prop-types": "^15.8.1",
